added image and some css styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Cool Landing Page</title>
 </head>
 <body>
     <header>
@@ -18,10 +19,10 @@
         <div class="container">
             <div class="description">
                 <h1>This Website is very cool</h1>
-                <p>Its seriously cool ya know</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis aperiam a est porro ducimus consequatur labore hic at, distinctio eveniet corrupti quaerat ut quo earum facere omnis nihil soluta. Nihil, exercitationem? Nam, delectus sed quasi quis ipsum fuga! Dolores, ea.</p>
                 <button>I agree that its cool</button>
             </div>
-            <img src="" alt="">
+            <img id="highlight" src="./images/vaclav-pechar-66dkmg_b_8o-unsplash.jpg" alt="car">
         </div>
     </div>
     <div class="info">
